migrated files from 'xwdee/dotfiles-archive'

--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: JetBrainsMono Nerd Font, monospace;
+    font-family: JetBrainsMono Nerd Font;
     font-weight: bold;
     font-size: 14px;
     min-height: 0;
@@ -48,17 +48,36 @@ window#waybar {
 #cpu,
 #memory,
 #workspaces,
+#cava,
 #tray,
-#backlight {
+#backlight,
+#language {
     background: #1e1e2e;
     padding: 0px 10px;
     margin: 3px 0px;
     margin-top: 5px;
-    /* border: 1px solid #181825; */
+    border: 1px solid #181825;
+}
+
+#battery {
+    color:#a6adc8;
 }
 
 #backlight {
     border-radius: 10px 0px 0px 10px;
+}
+
+#cava {
+    background: #1e1e2e;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+#language {
+    background: #1e1e2e;
+    border-radius: 10px;
+    padding: 6px 6px;
+    margin-left: 10px;
 }
 
 #tray {
@@ -114,10 +133,4 @@ window#waybar {
     border-left: 0px;
     border-right: 0px;
     margin-right: 5px;
-}
-
-#battery {
-    color:#a6adc8;
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 10px;
 }
