--- a/configs/wlogout/style.css
+++ b/configs/wlogout/style.css
@@ -1,88 +1,51 @@
 * {
-    font-family: JetBrains Mono;
-    font-size: 24px;
-    transition-property: background-color;
-    transition-duration: 0.7s;
-}
-
-window {
-    background-color: rgba(40, 40, 40, 0.1); /*#11111b;*/
-    border-radius: 10px;
-}
-
-button {
-    background-color: #1e1e2e;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 50px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 15%;
-    margin: 15px;
-}
-
-button:active,
-button:hover {
-    background-color: #cdd6f4;
-}
-
-button:focus {
-    background-color: #cdd6f4;
+	background-image: none;
+	box-shadow: none;
 }
 
 #lock {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
-}
-
-#lock:hover {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/lock-hover.png"), url("/usr/local/share/wlogout/icons/lock.png"));
-    color: #11111b;
+	background-image: url("/home/xunta/.config/wlogout/icons/lock.svg");
 }
 
 #logout {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
-}
-
-#logout:hover {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/logout-hover.png"), url("/usr/local/share/wlogout/icons/logout.png"));
-    color: #11111b;
+	background-image: url("/home/xunta/.config/wlogout/icons/logout.svg");
 }
 
 #suspend {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/sleep.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
+	background-image: url("/home/xunta/.config/wlogout/icons/suspend.svg");
 }
 
-#suspend:hover {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/sleep-hover.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
-    color: #11111b;
+#hibernate {
+	background-image: url("/home/xunta/.config/wlogout/icons/hibernate.svg");
 }
 
 #shutdown {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/power.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
-}
-
-#shutdown:hover {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/power-hover.png"), url("/usr/local/share/wlogout/icons/shutdown.png")); 
-    color: #11111b;
+	background-image: url("/home/xunta/.config/wlogout/icons/shutdown.svg");
 }
 
 #reboot {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/restart.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
+	background-image: url("/home/xunta/.config/wlogout/icons/reboot.svg");
 }
 
-#reboot:hover {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/restart-hover.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
-    color: #11111b;
+window {
+	background-color: rgba(30, 30, 46, 0.90);
 }
 
-#exit {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/restart.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
-    background-color: #11111b;
-
+button {
+	border-radius: 0;
+	border-color: #cba6f7;
+	text-decoration-color: #cdd6f4;
+	color: #cdd6f4;
+	background-color: #181825;
+	border-style: solid;
+	border-width: 1px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 25%;
 }
 
-#exit:hover {
-    background-image: image(url("/home/xunta/.config/assets/wlogout/assets/restart-hover.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
-    color: #11111b;
-    background-color: #cdd6f4;
+button:focus, button:active, button:hover {
+	/* 20% Overlay 2, 80% mantle */
+	background-color: rgb(48, 50, 66);
+	outline-style: none;
 }
