--- a/configs/swaync/style.css
+++ b/configs/swaync/style.css
@@ -1,342 +1,358 @@
+@import url("mocha.css");
+@define-color mpris-album-art-overlay alpha(@crust, 0.55);
+@define-color mpris-button-hover alpha(@crust, 0.50);
+@define-color text @subtext0;
+@define-color bg alpha(@crust,.5);
+@define-color bg-hover alpha(@crust,.8);
+@define-color mycolor @surface0;
+@define-color border-color alpha(@base, 0.15);
+
+@keyframes fadeIn{
+0% {
+    padding-left:20;
+    margin-left:50;
+    margin-right:50;
+}
+100% {
+    padding:0;
+    margin:0;
+}
+}
 * {
-  all: unset;
-  font-size: 14px;
-  font-family: "Ubuntu Nerd Font";
-  transition: 200ms;
+    outline:none;
 }
-
-trough highlight {
-  background: #cdd6f4;
+.control-center .notification-row {
+    background-color: unset;
 }
-
-scale trough {
-  margin: 0rem 1rem;
-  background-color: #313244;
-  min-height: 8px;
-  min-width: 70px;
+.control-center .notification-row .notification-background .notification,
+.control-center .notification-row .notification-background .notification .notification-content,
+.floating-notifications .notification-row .notification-background .notification,
+.floating-notifications.background .notification-background .notification .notification-content {
 }
+.notification{
+    background: alpha(@base,.5);
 
-slider {
-  background-color: #89b4fa;
-}
-
-.floating-notifications.background .notification-row .notification-background {
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #313244;
-  border-radius: 12.6px;
-  margin: 18px;
-  background-color: #1e1e2e;
-  color: #cdd6f4;
-  padding: 0;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification {
-  padding: 7px;
-  border-radius: 12.6px;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification.critical {
-  box-shadow: inset 0 0 7px 0 #f38ba8;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification .notification-content {
-  margin: 7px;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification .notification-content .summary {
-  color: #cdd6f4;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification .notification-content .time {
-  color: #a6adc8;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification .notification-content .body {
-  color: #cdd6f4;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * {
-  min-height: 3.4em;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action {
-  border-radius: 7px;
-  color: #cdd6f4;
-  background-color: #313244;
-  box-shadow: inset 0 0 0 1px #45475a;
-  margin: 7px;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #313244;
-  color: #cdd6f4;
-}
-
-.floating-notifications.background .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #74c7ec;
-  color: #cdd6f4;
-}
-
-.floating-notifications.background .notification-row .notification-background .close-button {
-  margin: 7px;
-  padding: 2px;
-  border-radius: 6.3px;
-  color: #1e1e2e;
-  background-color: #f38ba8;
-}
-
-.floating-notifications.background .notification-row .notification-background .close-button:hover {
-  background-color: #eba0ac;
-  color: #1e1e2e;
-}
-
-.floating-notifications.background .notification-row .notification-background .close-button:active {
-  background-color: #f38ba8;
-  color: #1e1e2e;
-}
-
-.control-center {
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #313244;
-  border-radius: 12.6px;
-  margin: 18px;
-  background-color: #1e1e2e;
-  color: #cdd6f4;
-  padding: 14px;
-}
-
-.control-center .widget-title > label {
-  color: #cdd6f4;
-  font-size: 1.3em;
-}
-
-.control-center .widget-title button {
-  border-radius: 7px;
-  color: #cdd6f4;
-  background-color: #313244;
-  box-shadow: inset 0 0 0 1px #45475a;
-  padding: 8px;
-}
-
-.control-center .widget-title button:hover {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #585b70;
-  color: #cdd6f4;
-}
-
-.control-center .widget-title button:active {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #74c7ec;
-  color: #1e1e2e;
-}
-
-.control-center .notification-row .notification-background {
-  border-radius: 7px;
-  color: #cdd6f4;
-  background-color: #313244;
-  box-shadow: inset 0 0 0 1px #45475a;
-  margin-top: 14px;
 }
 
 .control-center .notification-row .notification-background .notification {
-  padding: 7px;
-  border-radius: 7px;
+    margin-top: 0.150rem;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .3);
+    background: alpha(@base,.3);
+
+}
+.floating-notifications .notification{
+    animation: fadeIn .5s ease-in-out;
 }
 
-.control-center .notification-row .notification-background .notification.critical {
-  box-shadow: inset 0 0 7px 0 #f38ba8;
+.control-center .notification-row .notification-background .notification box,
+.control-center .notification-row .notification-background .notification widget,
+.control-center .notification-row .notification-background .notification .notification-content,
+.floating-notifications .notification-row .notification-background .notification box,
+.floating-notifications .notification-row .notification-background .notification widget,
+.floating-notifications.background .notification-background .notification .notification-content {
+    border-radius: 0.818rem;
+
+}
+.notification widget:hover{
+    background:alpha(@base,.2);
+}
+.floating-notifications.background .notification-background .notification .notification-content,
+.control-center .notification-background .notification .notification-content {
+    padding-top: 0.818rem;
+    padding-right: unset;
+    margin-right: unset;
 }
 
-.control-center .notification-row .notification-background .notification .notification-content {
-  margin: 7px;
+.control-center .notification-row .notification-background .notification.low .notification-content label,
+.control-center .notification-row .notification-background .notification.normal .notification-content label,
+.floating-notifications.background .notification-background .notification.low .notification-content label,
+.floating-notifications.background .notification-background .notification.normal .notification-content label {
+    padding-top:10px;
+    padding-left:10px;
+    padding-right:10px;
 }
 
-.control-center .notification-row .notification-background .notification .notification-content .summary {
-  color: #cdd6f4;
+.control-center .notification-row .notification-background .notification..notification-content image,
+.control-center .notification-row .notification-background .notification.normal .notification-content image,
+.floating-notifications.background .notification-background .notification.low .notification-content image,
+.floating-notifications.background .notification-background .notification.normal .notification-content image {
+    background-color: unset;
 }
 
-.control-center .notification-row .notification-background .notification .notification-content .time {
-  color: #a6adc8;
+.control-center .notification-row .notification-background .notification.low .notification-content .body,
+.control-center .notification-row .notification-background .notification.normal .notification-content .body,
+.floating-notifications.background .notification-background .notification.low .notification-content .body,
+.floating-notifications.background .notification-background .notification.normal .notification-content .body {
+    color: @text;
 }
 
-.control-center .notification-row .notification-background .notification .notification-content .body {
-  color: #cdd6f4;
+.control-center .notification-row .notification-background .notification.critical .notification-content,
+.floating-notifications.background .notification-background .notification.critical .notification-content {
+    background-color: @marron;
+
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * {
-  min-height: 3.4em;
+.control-center .notification-row .notification-background .notification.critical .notification-content image,
+.floating-notifications.background .notification-background .notification.critical .notification-content image{
+    background-color: unset;
+    color: @marron;
+
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action {
-  border-radius: 7px;
-  color: #cdd6f4;
-  background-color: #11111b;
-  box-shadow: inset 0 0 0 1px #45475a;
-  margin: 7px;
+.control-center .notification-row .notification-background .notification.critical .notification-content label,
+.floating-notifications.background .notification-background .notification.critical .notification-content label {
+    color: @red;
+
+}
+.notification-content{
+    padding:5;
+}
+.control-center .notification-row .notification-background .notification .notification-content .summary,
+.floating-notifications.background .notification-background .notification .notification-content .summary {
+    font-family: 'CodeNewRoman Nerd Font Propo';
+    font-size: 0.9909rem;
+    font-weight: 500;
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #313244;
-  color: #cdd6f4;
+.control-center .notification-row .notification-background .notification .notification-content .time,
+.floating-notifications.background .notification-background .notification .notification-content .time {
+    font-size: 0.8291rem;
+    font-weight: 500;
+    margin-right: 1rem;
+    padding-right: unset;
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #74c7ec;
-  color: #cdd6f4;
+.control-center .notification-row .notification-background .notification .notification-content .body,
+.floating-notifications.background .notification-background .notification .notification-content .body {
+    font-family: 'CodeNewRoman Nerd Font Propo';
+    font-size: 0.8891rem;
+    font-weight: 400;
+    margin-top: 0.310rem;
+    padding-right: unset;
+    margin-right: unset;
 }
 
-.control-center .notification-row .notification-background .close-button {
-  margin: 7px;
-  padding: 2px;
-  border-radius: 6.3px;
-  color: #1e1e2e;
-  background-color: #eba0ac;
+.control-center .notification-row .close-button,
+.floating-notifications.background .close-button {
+    all:unset;
+    background-color: unset;
+    border-radius: 0%;
+    border: none;
+    box-shadow: none;
+    margin-right: 0px;
+    margin-top: 3px;
+    margin-bottom: unset;
+    padding-bottom: unset;
+    min-height: 20px;
+    min-width: 20px;
+    text-shadow: none;
+    color:@text;
 }
 
-.close-button {
-  border-radius: 6.3px;
+.control-center .notification-row .close-button:hover,
+.floating-notifications.background .close-button:hover {
+    all:unset;
+    background-color: @bg;
+    border-radius: 100%;
+    border: none;
+    box-shadow: none;
+    margin-right: 0px;
+    margin-top: 3px;
+    margin-bottom: unset;
+    padding-bottom: unset;
+    min-height: 20px;
+    min-width: 20px;
+    text-shadow: none;
+    color:@text;
+
 }
 
-.control-center .notification-row .notification-background .close-button:hover {
-  background-color: #f38ba8;
-  color: #1e1e2e;
+.control-center {
+    background: @bg;
+    color: @text;
+    border-radius: 10px;
+    border:none;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .65);
+}
+.widget-title {
+    padding:unset;
+    margin:unset;
+    color: @text;
+    padding-left:20px;
+    padding-top:20px;
 }
 
-.control-center .notification-row .notification-background .close-button:active {
-  background-color: #f38ba8;
-  color: #1e1e2e;
+.widget-title > button {
+    padding:unset;
+    margin:unset;
+    font-size: initial;
+    color: @text;
+    text-shadow: none;
+    background: rgba(255,85,85,.3);
+    border: none;
+    box-shadow: none;
+    border-radius: 12px;
+    padding:0px 10px;
+    margin-right:20px;
+    margin-top:3px;
+    transition: all .7s ease;
 }
 
-.control-center .notification-row .notification-background:hover {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #7f849c;
-  color: #cdd6f4;
+.widget-title > button:hover {
+    border: none;
+    background: @bg-hover;
+    transition: all .7s ease;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, .65);
 }
 
-.control-center .notification-row .notification-background:active {
-  box-shadow: inset 0 0 0 1px #45475a;
-  background-color: #74c7ec;
-  color: #cdd6f4;
+.widget-label {
+    margin: 8px;
 }
 
-.notification.critical progress {
-  background-color: #f38ba8;
+.widget-label > label {
+    font-size: 1.1rem;
 }
 
-.notification.low progress,
-.notification.normal progress {
-  background-color: #89b4fa;
+.widget-mpris {
 }
-
-.control-center-dnd {
-  margin-top: 5px;
-  border-radius: 8px;
-  background: #313244;
-  border: 1px solid #45475a;
-  box-shadow: none;
-}
-
-.control-center-dnd:checked {
-  background: #313244;
-}
-
-.control-center-dnd slider {
-  background: #45475a;
-  border-radius: 8px;
-}
-
-.widget-dnd {
-  margin: 0px;
-  font-size: 1.1rem;
-}
-
-.widget-dnd > switch {
-  font-size: initial;
-  border-radius: 8px;
-  background: #313244;
-  border: 1px solid #45475a;
-  box-shadow: none;
-}
-
-.widget-dnd > switch:checked {
-  background: #313244;
-}
-
-.widget-dnd > switch slider {
-  background: #45475a;
-  border-radius: 8px;
-  border: 1px solid #6c7086;
-}
-
 .widget-mpris .widget-mpris-player {
-  background: #313244;
-  padding: 7px;
+    padding: 16px;
+    margin: 16px 20px;
+    background-color: @mpris-album-art-overlay;
+    border-radius: 12px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .65);
+}
+.widget-mpris .widget-mpris-player button:hover {
+    all: unset;
+    background: @bg-hover;
+    text-shadow: none;
+    border-radius: 15px;
+    border: none; 
+    padding: 5px; 
+    margin: 5px;
+    transition: all 0.5s ease; 
+}
+.widget-mpris .widget-mpris-player button {
+    color:@text;
+    text-shadow: none;
+    border-radius: 15px;
+    border: none;
+    padding: 5px;
+    margin: 5px;
+    transition: all 0.5s ease;
+}
+.widget-mpris .widget-mpris-player button:not(.selected) {
+    background: transparent;
+    border: 2px solid transparent;
+}
+.widget-mpris .widget-mpris-player button:hover {
+    border: 2px solid transparent;
 }
 
-.widget-mpris .widget-mpris-title {
-  font-size: 1.2rem;
+.widget-mpris .widget-mpris-player .widget-mpris-album-art {
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
 }
 
-.widget-mpris .widget-mpris-subtitle {
-  font-size: 0.8rem;
+.widget-mpris .widget-mpris-player .widget-mpris-title {
+    font-weight: bold;
+    font-size: 1.25rem;
 }
 
-.widget-menubar > box > .menu-button-bar > button > label {
-  font-size: 3rem;
-  padding: 0.5rem 2rem;
+.widget-mpris .widget-mpris-player .widget-mpris-subtitle {
+    font-size: 1.1rem;
 }
 
-.widget-menubar > box > .menu-button-bar > :last-child {
-  color: #f38ba8;
+.widget-mpris .widget-mpris-player > box > button:hover {
+    background-color: @mpris-button-hover;
 }
-
-.power-buttons button:hover,
-.powermode-buttons button:hover,
-.screenshot-buttons button:hover {
-  background: #313244;
-}
-
-.control-center .widget-label > label {
-  color: #cdd6f4;
-  font-size: 2rem;
-}
-
 .widget-buttons-grid {
-  padding-top: 1rem;
+    font-family:"CodeNewRoman Nerd Font Propo";
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+    margin: 10px;
+    border-radius: 12px;
+    background:transparent;
 }
 
-.widget-buttons-grid > flowbox > flowboxchild > button label {
-  font-size: 2.5rem;
+.widget-buttons-grid>flowbox>flowboxchild>button label {
+    font-size: 20px;
+    color: @subtext0;
+    transition: all .7s ease;
+}
+.widget-buttons-grid>flowbox>flowboxchild>button:hover label {
+    font-size: 20px;
+    color: @text;
+    transition: all .7s ease;
+}
+.widget-buttons-grid > flowbox > flowboxchild > button {
+    background: transparent;
+    border-radius: 12px;
+    text-shadow:none;
+    box-shadow: 0px 0px 8px rgba(255,255,255, .02);
+    transition: all .5s ease;
+}
+.widget-buttons-grid > flowbox > flowboxchild > button:hover {
+    background: @surface0;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .2);
+    transition: all .5s ease;
+
+}
+
+.widget-buttons-grid > flowbox > flowboxchild > button.toggle:checked {
+    background: @base;
+}
+.widget-buttons-grid > flowbox > flowboxchild > button.toggle:checked label {
+    color: @crust;
+}
+
+.widget-menubar > box > .menu-button-bar > button {
+    border: none;
+    background: transparent;
+}
+
+.topbar-buttons > button {
+    border: none;
+    background: transparent;
+}
+
+trough {
+    border-radius: 20px;
+    background: transparent;
+}
+
+trough highlight {
+    padding: 5px;
+    background: @base;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, .5);
+    transition: all .7s ease;
+}
+trough highlight:hover {
+    padding: 5px;
+    background: @base;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
+    transition: all .7s ease;
+}
+
+trough slider {
+    background: transparent;
+}
+trough slider:hover {
+    background: transparent;
 }
 
 .widget-volume {
-  padding-top: 1rem;
+    background-color: transparent;
+    padding: 8px;
+    margin: 8px;
+    border-radius: 12px;
 }
-
-.widget-volume label {
-  font-size: 1.5rem;
-  color: #74c7ec;
-}
-
-.widget-volume trough highlight {
-  background: #74c7ec;
-}
-
-.widget-backlight trough highlight {
-  background: #f9e2af;
-}
-
-.widget-backlight label {
-  font-size: 1.5rem;
-  color: #f9e2af;
-}
-
-.widget-backlight .KB {
-  padding-bottom: 1rem;
-}
-
-.image {
-  padding-right: 0.5rem;
+.widget-backlight {
+    background-color: transparent;
+    padding: 8px;
+    margin: 8px;
+    border-radius: 12px;
 }
