--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,143 +1,166 @@
-@import "mocha.css";
+@import url("mocha.css");
 * {
-    border: none;
-    border-radius: 0;
-    font-family: JetBrainsMono Nerd Font;
-    font-weight: bold;
-    font-size: 14px;
-    min-height: 0;
+    font-size:15px;
+    font-family: "CodeNewRoman Nerd Font Propo";
 }
-
-window#waybar {
-    background: @mantle;
-    color: @text;
+window#waybar{
+    all:unset;
 }
-
-#workspaces button {
-    padding: 5px;
-    color: @subface2;
-    margin-right: 5px;
+.modules-left {
+    padding:7px;
+    margin:10 0 5 10;
+    border-radius:10px;
+    background: alpha(@crust,.6);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
-
-#workspaces button.active {
+.modules-center {
+    padding:7px;
+    margin:10 0 5 0;
+    border-radius:10px;
+    background: alpha(@crust,.6);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
+}
+.modules-right {
+    padding:7px;
+    margin: 10 10 5 0;
+    border-radius:10px;
+    background: alpha(@crust,.6);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
+}
+tooltip {
+    background:@crust;
     color: @subtext0;
 }
-
-#workspaces button.focused {
-    color: @subtext0;
-    background: @maroon;
-    border-radius: 10px;
+#clock:hover, #custom-cava:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
+    transition: all .3s ease;
+    color:@surface0;
 }
-
-#workspaces button.urgent {
-    color: @crust;
-    background: @green;
-    border-radius: 10px;
+#custom-notification {
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@subtext0;
 }
-
-#workspaces button:hover {
-    background: @text;
-    color: @crust; 
-    border-radius: 10px;
+#clock{
+    padding: 0px 5px;
+    color:@subtext0;
+    transition: all .3s ease;
 }
+#custom-cava{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@subtext0;
 
-#window,
-#clock,
-#battery,
-#pulseaudio,
-#custom-swaync,
-#network,
-#cpu,
-#memory,
-#language,
-#workspaces,
-#custom-cava,
-#tray,
-#backlight {
-    background: @base;
-    padding: 0px 10px;
-    margin: 3px 0px;
-    margin-top: 5px;
 }
-
-#custom-cava {
-    background: @base;
-    border-radius: 10px;
-    margin-left: 10px;
-}
-
-#backlight {
-    border-radius: 10px 0px 0px 10px;
-}
-
-#language {
-    background: @base;
-    border-radius: 10px;
-    padding: 6px 6px;
-    margin-left: 10px;
-}
-
-#tray {
-    border-radius: 10px;
-    margin-right: 10px;
-}
-
-#custom-swaync {
-    color: @subtext0;
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 10px;
-}
-
 #workspaces {
-    background: @base;
-    border-radius: 10px;
-    margin-left: 10px;
-    padding-right: 0px;
-    padding-left: 5px;
+    padding: 0px 5px;
+}
+#workspaces button {
+    all:unset;
+    padding: 0px 5px;
+    color: alpha(@surface0,.4);
+    transition: all .2s ease;
+}
+#workspaces button:hover {
+    color:rgba(0,0,0,0);
+    border: none;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    transition: all 1s ease;
+}
+#workspaces button.active {
+    color: @surface0;
+    border: none;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
+}
+#workspaces button.empty {
+    color: rgba(0,0,0,0);
+    border: none;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
+}
+#workspaces button.empty:hover {
+    color: rgba(0,0,0,0);
+    border: none;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    transition: all 1s ease;
+}
+#workspaces button.empty.active {
+    color: @surface0;
+    border: none;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
+}
+#bluetooth{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@subtext0;
+
+}
+#network{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@subtext0;
+
+}
+#battery{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@subtext0;
+
+
+}
+#battery.charging {
+    color: #26A65B;
 }
 
-#cpu {
-    border-radius: 0px 10px 10px 0px;
-    margin-right: 10px;
+#battery.warning:not(.charging) {
+    color: #ffbe61;
 }
 
-#memory {
-    border-radius: 10px 0px 0px 10px;
+#battery.critical:not(.charging) {
+    color: #f53c3c;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+#group-expand{
+    padding: 0px 5px;
+    transition: all .3s ease; 
+}
+#custom-expand{
+    padding: 0px 5px;
+    color:alpha(@foreground,.2);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .7);
+    transition: all .3s ease; 
+}
+#custom-expand:hover{
+    color:rgba(255,255,255,.2);
+    text-shadow: 0px 0px 2px rgba(255, 255, 255, .5);
+}
+#custom-colorpicker{
+    padding: 0px 5px;
+}
+#cpu,#memory,#temperature{
+    padding: 0px 5px;
+    transition: all .3s ease; 
+    color:@subtext0;
+
+}
+#custom-endpoint{
+    color:transparent;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 1);
+
+}
+#tray{
+    padding: 0px 5px;
+    transition: all .3s ease; 
+
+}
+#tray menu * {
+    padding: 0px 5px;
+    transition: all .3s ease; 
 }
 
-#window {
-    border-radius: 10px;
-    margin-left: 60px;
-    margin-right: 60px;
-}
-
-#clock {
-    color: @subtext0;
-    border-radius: 10px 10px 10px 10px;
-    margin-left: 5px;
-    border-right: 0px;
-}
-
-#network {
-    color:  @subtext0;
-    border-radius: 10px 0px 0px 10px;
-
-}
-
-#pulseaudio {
-    color: @subtext0;
-    border-left: 0px;
-    border-right: 0px;
-}
-
-#pulseaudio.microphone {
-    color: @subtext0;
-    border-radius: 0px 10px 10px 0px;
-    border-left: 0px;
-    border-right: 0px;
-    margin-right: 5px;
-}
-
-#battery {
-    color: @subtext0;
+#tray menu separator {
+    padding: 0px 5px;
+    transition: all .3s ease; 
 }
