--- a/waybar/style.css
+++ b/waybar/style.css
@@ -3,9 +3,11 @@
     font-size: 16px;
     font-family: "CodeNewRoman Nerd Font Propo";
 }
-window#waybar{
+
+window#waybar {
     all:unset;
 }
+
 .modules-left {
     padding:7px;
     margin:10 0 5 10;
@@ -13,6 +15,7 @@ window#waybar{
     background: alpha(@crust,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
+
 .modules-center {
     padding:7px;
     margin:10 0 5 0;
@@ -20,6 +23,7 @@ window#waybar{
     background: alpha(@crust,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
+
 .modules-right {
     padding:7px;
     margin: 10 10 5 0;
@@ -27,10 +31,12 @@ window#waybar{
     background: alpha(@crust,.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
 }
+
 tooltip {
     background:@crust;
     color: @subtext0;
 }
+
 #clock:hover,
 #custom-cava:hover,
 #language:hover,
@@ -41,7 +47,7 @@ tooltip {
 #battery:hover,
 #cpu:hover,
 #memory:hover,
-#temperature:hover{
+#temperature:hover {
     transition: all .3s ease;
     color:@surface0;
 }
@@ -58,13 +64,13 @@ tooltip {
     color:@subtext0;
 }
 
-#clock{
+#clock {
     padding: 0px 5px;
     color:@subtext0;
     transition: all .3s ease;
 }
 
-#custom-cava{
+#custom-cava {
     padding: 0px 5px;
     transition: all .3s ease;
     color:@subtext0;
@@ -80,58 +86,66 @@ tooltip {
 #workspaces {
     padding: 0px 5px;
 }
+
 #workspaces button {
     all:unset;
     padding: 0px 5px;
-    color: alpha(@surface0,.4);
+    color: alpha(@mauve,.4);
     transition: all .2s ease;
 }
+
 #workspaces button:hover {
     color:rgba(0,0,0,0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 1s ease;
 }
+
 #workspaces button.active {
-    color: @surface0;
+    color: @mauve;
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
+
 #workspaces button.empty {
     color: rgba(0,0,0,0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
 }
+
 #workspaces button.empty:hover {
     color: rgba(0,0,0,0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 1s ease;
 }
+
 #workspaces button.empty.active {
     color: @surface0;
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
-#bluetooth{
+
+#bluetooth {
     padding: 0px 5px;
     transition: all .3s ease;
     color:@subtext0;
 
 }
-#network{
+
+#network {
     padding: 0px 5px;
     transition: all .3s ease;
     color:@subtext0;
 
 }
-#battery{
+
+#battery {
     padding: 0px 5px;
     transition: all .3s ease;
     color:@subtext0;
-
-
 }
+
 #battery.charging {
     color: #26A65B;
 }
@@ -148,39 +162,46 @@ tooltip {
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
+
 #group-expand{
     padding: 0px 5px;
     transition: all .3s ease; 
 }
+
 #custom-expand{
     padding: 0px 5px;
     color:alpha(@foreground,.2);
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .7);
     transition: all .3s ease; 
 }
+
 #custom-expand:hover{
     color:rgba(255,255,255,.2);
     text-shadow: 0px 0px 2px rgba(255, 255, 255, .5);
 }
+
 #custom-colorpicker{
     padding: 0px 5px;
 }
+
 #cpu,#memory,#temperature{
     padding: 0px 5px;
     transition: all .3s ease; 
     color:@subtext0;
-
 }
+
 #custom-endpoint{
     color:transparent;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 1);
 
 }
+
 #tray{
     padding: 0px 5px;
     transition: all .3s ease; 
 
 }
+
 #tray menu * {
     padding: 0px 5px;
     transition: all .3s ease; 
